[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nordlys"
version = "0.2.4"
description = "Intelligent LLM Infrastructure with Smart Model Selection"
authors = [{ name = "Botir Khaltaev", email = "botirkhaltaev@llmadaptive.uk" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
keywords = ["llm", "ai", "model-selection", "machine-learning", "nordlys"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Data Validation
  "pydantic>=2.11.5,<3",
  # Data Processing
  "pandas>=2.0.0",
  # ML
  "scikit-learn>=1.5.0,<2.0.0",
  # Clustering
  "hdbscan>=0.8.33",
  "umap-learn>=0.5.0",
  "numba>=0.56.0",     # Required for Python 3.11+ compatibility
  # Caching
  "cachetools>=5.0.0,<6",
]


[project.urls]
Homepage = "https://www.nordlyslabs.com"
Repository = "https://github.com/Nordlys-Labs/nordlys"
Documentation = "https://docs.nordlyslabs.com"
"Bug Tracker" = "https://github.com/Nordlys-Labs/nordlys/issues"


[project.optional-dependencies]
cpu = [
  "nordlys-core>=0.2.4,<1",
  "torch>=2.2.0",
  "sentence-transformers>=5.2.0,<6",
]
cu12 = [
  "nordlys-core-cu12>=0.2.4,<1 ; sys_platform == 'linux'",
  "torch>=2.2.0",
  "sentence-transformers>=5.2.0,<6",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu12" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu128", extra = "cu12", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[dependency-groups]
dev = [
  "ty>=0.0.3,<1",
  "ruff>=0.11.11,<0.14",
  "types-pyyaml>=6.0.12.20250516,<7",
  "types-pyjwt>=1.7.1",
  "pytest>=9.0.2",
  "pytest-cov>=6.2.1",
  "pytest-asyncio>=0.26.0",
  "pytest-benchmark>=5.2.3",
]
test = ["pytest>=9.0.2", "pytest-cov>=6.2.1,<8", "pytest-asyncio>=0.26.0"]

[tool.uv-build]
packages = ["nordlys"]

[tool.ty]
# ty auto-discovers src/ directory and virtual environment

[tool.ty.src]
exclude = ["tests/", "scripts/"]

[tool.ty.rules]
unused-ignore-comment = "warn"
# Ignore unresolved imports globally (for C++ extension module nordlys_core_ext)
unresolved-import = "ignore"

[tool.pytest.ini_options]
addopts = "-v"
python_functions = ["test_*", "bench_*"]
filterwarnings = [
  "ignore::sklearn.exceptions.ConvergenceWarning",
  "ignore:Graph is not fully connected:UserWarning",
  "ignore::DeprecationWarning",
  "ignore:invalid escape sequence:SyntaxWarning",
  "ignore::FutureWarning",
  "ignore:.*torch.*:UserWarning",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"
